[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu theme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/Courier Prime.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Pause Menu.gd" type="Script" id=3]

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=6]
size = 48
extra_spacing_top = 7
extra_spacing_bottom = 63
font_data = ExtResource( 2 )

[node name="Pause Menue" type="Popup"]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.0
margin_top = -160.0
margin_right = 248.0
margin_bottom = 168.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.380392, 0.380392, 0.380392, 0.686275 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 476.0
margin_bottom = 119.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Paused"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 123.0
margin_right = 476.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainMenu" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 156.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 724, 324 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Main Menu"
expand_icon = true

[node name="Restart" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 316.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 724, 324 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Restart"

[node name="Resume" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 320.0
margin_right = 476.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 724, 324 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Resume" to="." method="_on_Resume_pressed"]
